--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/rentflixT.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>OTT Rentals</title>
+    <title>Rentflix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
